# opym

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  OPM_Cropping_Refactored.ipynb  OPM_Interactive_Petakit_Tuner.ipynb  OPM_Interactive_Viewer.ipynb  OPM_deskew_rotate.ipynb  README.md  autofix_long_lines.py  config.json  hello.py  launch_petakit_servers.sh  pyproject.toml  test_load.py
Notebooks/: Average_PSF.ipynb  OPM_Average_PSF.ipynb  OPM_Cropping_Refactored.ipynb  OPM_Interactive_Petakit_Tuner.ipynb  OPM_Interactive_Viewer.ipynb  OPM_Measure_Angle.ipynb  OPM_deskew_rotate.ipynb
scripts/: generate_synthetic_psfs.py
src/: cli.py  core.py  cudawrapper.py  libinstall.py  metadata.py
src/opym/: BigTiffLoader.m  __init__.py  batch.py  cli.py  consolidate.py  core.py  dataloader.py  deskewer.py  local_gpu_worker.py  metadata.py  petakit.py  profile_report.py  psf_averager.py  psf_extractor.py  roi_utils.py  run_bigtiff_cropper.m  run_gpu_pipeline.m  run_gpu_pipeline_async.m  run_petakit_cropper.m  run_petakit_server.m  submit_opm.py  ui.py  utils.py  verify_mex.m  viewer.py
src/opym/patches/: XR_deskewRotateFrame.m  decon_lucy_function.m
src/opym/viewer/: __init__.py  _mip.py  _selectors.py  _viewers.py
src/opym/widgets/: __init__.py  decon_viewer.py  extractor.py
