# Ruff style: Compliant
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Core Project Metadata ---
[project]
name = "opym"
version = "0.2.0"
description = "A pre-processor for OPM data to crop and split channels for pypetakit5d."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brandon Scott", email = "brandon.scott@sdsmt.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "tifffile",
    "zarr",
    "tqdm",
    "scikit-image",
    "PyPetaKit5D",
    "imagecodecs",
]

[project.optional-dependencies]
# Development dependencies, installed with `uv pip install -e .[dev]`
dev = ["ruff"]

# --- NEW: Dependencies for the optional Jupyter viewers ---
viewer = [
    "ipywidgets",
    "matplotlib",
    "ipyfilechooser",
    "ipython"
]

# --- Entry Points & URLs ---
[project.scripts]
opym = "opym.cli:main"

# --- Tool Configuration ---
[tool.hatch.build.targets.wheel]
packages = ["src/opym"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
