# Ruff style: Compliant
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Core Project Metadata ---
[project]
name = "opym"
version = "0.2.1-dev2"
description = "A pre-processor for OPM data to crop and split channels for pypetakit5d."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
authors = [
    { name = "Brandon Scott", email = "brandon.scott@sdsmt.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

# Keywords for discoverability on PyPI
keywords = [
    "microscopy",
    "opm",
    "llsm",
    "bioimaging",
    "image-processing",
    "tiff",
    "zarr",
    "pypetakit",
]

dependencies = [
    "numpy",
    "tifffile",
    "zarr",
    "tqdm",
    "scikit-image",
    "scikit-learn",
    "PyPetaKit5D",
    "imagecodecs",
]

[project.optional-dependencies]
# Install with `uv pip install -e .[dev]`
dev = [
    "bandit",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

# Dependencies for the optional Jupyter viewers
# Install with `uv pip install -e .[viewer]`
viewer = [
    "ipywidgets",
    "matplotlib",
    "ipyfilechooser",
    "ipython",
]

# --- Entry Points & URLs ---
[project.scripts]
opym = "opym.cli:main"

# URLs for the PyPI sidebar
[project.urls]
Homepage = "https://github.com/bscott711/opym" # Example URL
Repository = "https://github.com/bscott711/opym" # Example URL
Bug-Tracker = "https://github.com/bscott711/opym/issues" # Example URL

# --- Tool Configuration ---
[tool.hatch.build.targets.wheel]
packages = ["src/opym"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
